# physics

./: README.md
LotkaVolterra/: .gitignore  CMakeLists.txt
LotkaVolterra/Octave/: PlotResult.m
LotkaVolterra/doc/: Makefile
LotkaVolterra/doc/bibliography/: Ref.bib
LotkaVolterra/doc/src/: Equations.tex
LotkaVolterra/src/: main.cpp
TestGSL/: README.md
TestGSL/bessel/C/: bessel.c
TestGSL/bessel/Cpp/: besselpp.cpp
TestGSL/lambert/: CMakeLists.txt  lambert.cpp
TestGSL/lambert/Octave/: PlotResult.m
